# parmesan

./: .gitignore  Cargo.toml  Makefile  README.md  TODOs
assets/: asc-12.yaml
logs/: cmd
logs/0.0.4-beta-1/fakubitsu-laptop-i3-1005G1/: parallel.html
logs/0.0.4-beta-2/fakubitsu-laptop-i3-1005G1/: parallel.html
logs/0.0.4/argentera-server-i7-7800X/: INFO  parallel.html  sequential.html
logs/0.0.4/lombarde-laptop-i7-8550U/: INFO  parallel.html  sequential.html
logs/0.0.5-beta-0/fakubitsu-laptop-i3-1005G1/: parallel.html
logs/0.0.5/fakubitsu-laptop-i3-1005G1/: parallel.html
scripts/: archive-self-HEAD.sh  cmd
scripts/add-sub-special-chains/: gen-chains.rb  parse-asc_log-to-yaml.rb  variant.rb
scripts/koyama-tsuruoka/: kt.rb
scripts/optimal-multiplication/: search-optimum-multiplication.rb
src/: arithmetics.rs  ciphertexts.rs  demos.rs  experiments.rs  key_set.rs  lib.rs  main.rs  misc.rs  params.rs
src/cloudovo/: addition.rs  maximum.rs  mod.rs  multiplication.rs  neural_network.rs  pbs.rs  rounding.rs  scalar_multiplication.rs  signum.rs  squaring.rs
src/cloudovo/scalar_multiplication/: asc.rs  mod.rs  naf.rs
src/seq_utils/: mod.rs  thread.rs  thread_scope.rs
src/tests/: mod.rs  test_addition.rs  test_addition_cc.rs  test_addition_misc.rs  test_encryption.rs  test_maximum.rs  test_multiplication.rs  test_nn.rs  test_scalar_multiplication.rs  test_signum.rs  test_squaring.rs  test_substraction.rs
src/tests/test_history/: add_opposite_samples.txt  add_rand_samples.txt  add_zero_samples.txt  addition_corner_cases_failures.txt  addition_corner_cases_samples.txt  enc_message_samples.txt  enc_negative_samples.txt  enc_positive_samples.txt  enc_rand_samples.txt  multiply_message_samples.txt  multiply_negative_samples.txt  scalar_addition.txt  scalar_mul_add_zero_samples.txt  scalar_mul_neg_one_samples.txt  scalar_mul_one_samples.txt  scalar_mul_zero_samples.txt  scalar_multiply_failures.txt  scalar_multiply_hw1_samples.txt  scalar_multiply_rd_samples.txt  scalar_multiply_samples.txt  signum_samples.txt  squaring_rd_samples.txt  triv_addition.txt
src/userovo/: encryption.rs  keys.rs  mod.rs
tests/: mod.rs  test_addition.rs  test_addition_misc.rs  test_encr_word.rs  test_encryption.rs  test_maximum.rs  test_multiplication.rs  test_nn.rs  test_pbs.rs  test_rounding.rs  test_scalar_multiplication.rs  test_signum.rs  test_squaring.rs
tests/common/: mod.rs
