[package]
name = "parmesan"
version = "0.0.20-alpha-1"
edition = "2018"
license = "AGPL-3.0"
description = "PARMESAN: Parallel ARithMEticS over tfhe ENcrypted data."
homepage = "https://github.com/fakub/parmesan"
documentation = "https://github.com/fakub/parmesan"
repository = "https://github.com/fakub/parmesan"
readme = "README.md"
keywords = ["cryptography", "fhe", "homomorphic", "arithmetics", "parallel"]
categories = ["cryptography", "mathematics", "science"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "^2.0.0"
rayon = "^1.5.1"
crossbeam-utils = "^0.8.0"
rand = "^0.8.0"
chrono = "^0.4.0"
lazy_static = "^1.4.0"
serde = { version = "^1.0", features = ["derive"] }
serde_yaml = "^0.8"
bincode = "^1.3.3"
concrete-core = { package = "concrete-core-experimental", version = "^1.0.0-alpha", features = ["multithread", "serde_serialize"]}
# just for params (consider)
concrete-shortint = { version = "^0.1.0-beta" }

[features]
default = []                # no feature selected by default
# sequential = []             # run (selected) algorithms sequentially
measure = []                # measure duration of selected operations
log_ops = ["measure"]       # log operation timing into a logfile (used in gnuplot scripts)
