[package]
name = "parmesan"
version = "0.1.0-alpha"
edition = "2021"
license = "AGPL-3.0"
description = "PARMESAN: Parallel ARithMEticS over ENcrypted data."
homepage = "https://github.com/fakub/parmesan"
documentation = "https://github.com/fakub/parmesan"
repository = "https://github.com/fakub/parmesan"
readme = "README.md"
keywords = ["cryptography", "fhe", "homomorphic", "arithmetics", "parallel"]
categories = ["cryptography", "mathematics", "science"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "^2.0"
rayon = { version = "^1.7" }              # optional = true .. hard to disable for seq_analyze
crossbeam-utils = { version = "^0.8" }    # optional = true
rand = "^0.8"
chrono = "^0.4"
lazy_static = "^1.4"
serde = { version = "^1.0", features = ["derive"] }
serde_yaml = "^0.9"
bincode = "^1.3"
tfhe = { version = "^0.2", features = ["shortint", "x86_64-unix"] }

[features]
default = []                            # no feature selected by default
seq_analyze = ["measure"]               # run algorithms sequentially & count bootstraps
measure = []                            # measure duration of selected operations
log_ops = ["measure"]                   # log operation timing into a logfile (used in gnuplot scripts)
